--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "helo\n"
+      "Hello Capstone Project Course\n"
      ]
     }
    ],
